kubernetes/examples/k8s/postgres.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  labels:
    app.kubernetes.io/name: postgres-service
spec:
  selector:
    app.kubernetes.io/name: postgres
    app.kubernetes.io/version: "13"
  ports:
    - name: postgres
      protocol: TCP
      port: 5432
      targetPort: 5432
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: postgres
      app.kubernetes.io/version: "13"
  template:
    metadata:
      labels:
        app.kubernetes.io/name: postgres
        app.kubernetes.io/version: "13"
    spec:
      containers:
        - name: postgres
          image: postgres:13
          ports:
            - name: postgres
              containerPort: 5432
          volumeMounts:
            - name: db-data
              mountPath: /var/lib/postgresql/data
            - name: postgres-config-map
              mountPath: /docker-entrypoint-initdb.d/
      volumes:
        - name: db-data
        - name: postgres-config-map
          configMap:
            name: postgres-config
