kubernetes/examples/k8s/simple-backend.yml
apiVersion: v1
kind: Service
metadata:
  name: simple-backend
  labels:
    app.kubernetes.io/name: simple-backend-service
spec:
  selector:
    app.kubernetes.io/name: simple-backend
    app.kubernetes.io/version: "v1.0"
  ports:
    - name: backend
      protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: simple-backend
      app.kubernetes.io/version: "v1.0"
  template:
    metadata:
      labels:
        app.kubernetes.io/name: simple-backend
        app.kubernetes.io/version: "v1.0"
    spec:
      containers:
        - name: simple-backend
          image: romanowalex/simple-backend:v1.0
          ports:
            - name: backend
              containerPort: 8080
              protocol: TCP
