kubernetes/examples/k8s/simple-frontend.yml
apiVersion: v1
kind: Service
metadata:
  name: simple-frontend
  labels:
    app.kubernetes.io/name: simple-frontend-service
spec:
  selector:
    app.kubernetes.io/name: simple-frontend
    app.kubernetes.io/version: "v1.0"
  ports:
    - name: frontend
      protocol: TCP
      port: 3000
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: simple-frontend
      app.kubernetes.io/version: "v1.0"
  template:
    metadata:
      labels:
        app.kubernetes.io/name: simple-frontend
        app.kubernetes.io/version: "v1.0"
    spec:
      containers:
        - name: simple-frontend
          image: romanowalex/simple-frontend:v1.0
          ports:
            - name: frontend
              containerPort: 80
              protocol: TCP
