kubernetes/examples/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: simple-frontend.romanow-alex.ru
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: simple-frontend
                port:
                  number: 3000
